[package]
name = "MoonKernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "kernel/main.rs"

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch_x86_64 = { path = "arch/x86_64" }

[dependencies]
limine = "0.5.0"
arch_x86_64 = { path = "arch/x86_64" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
